--- a/app/assets/stylesheets/event-stage.css.scss
+++ b/app/assets/stylesheets/event-stage.css.scss
@@ -117,6 +117,10 @@
 			margin-top: 5px;
 		}
 
+        tr[disabled] {
+            color: $gray;
+        }
+
 		td {
 			vertical-align: middle;
 		}
