--- a/app/assets/stylesheets/event-stage.css.scss
+++ b/app/assets/stylesheets/event-stage.css.scss
@@ -214,6 +214,12 @@
 		margin-right: 20px;
 	}
 
+    .p-start-days {
+        float: left;
+        max-width: 60px;
+        margin-right: 20px;
+    }
+
 	.p-start-hour {
 		float: left;
 		max-width: 66px;
