--- a/app/assets/stylesheets/utilities.css.scss
+++ b/app/assets/stylesheets/utilities.css.scss
@@ -118,7 +118,15 @@ label.switchery-label {
 	}
 }
 
+.input-group-spaced {
+    display: table;
 
+    .input-group-addon,
+    .input-group-btn,
+    .form-control {
+        display: table-cell;
+    }
+}
 
 
 /***********
